# CMake-Project

./: CMakeLists.txt  README.md
A/: index.cpp  preparing.py
B/: CMakeLists.txt  Makefile  cmake_install.cmake  lib.cpp  lib.h
C/: main.cpp
